# ckb_builder_track

./: .gitattributes  .gitignore  LICENSE  README.md  ckb_wk_1_report.md
Rust/guessing_game/src/: main.rs
Weekly_Report/: ckb_wk_1_report.md  ckb_wk_2_report.md  ckb_wk_4_report.md
Weekly_Report/April/: ckb_wk_1_report.md  ckb_wk_2_report.md  ckb_wk_3_report.md  ckb_wk_4_report.md  ckb_wk_5_report.md
Weekly_Report/February/: ckb_wk_1_report.md  ckb_wk_2_-4_report.md
Weekly_Report/January/: ckb_wk_2_report.md  ckb_wk_3_report.md  ckb_wk_4_report.md
Weekly_Report/July/: ckb_wk_1_report.md  ckb_wk_2_report.md  ckb_wk_3_report.md  ckb_wk_4_report.md
Weekly_Report/June/: ckb_wk_1_report.md  ckb_wk_2_report.md  ckb_wk_3_report.md  ckb_wk_4_report.md
Weekly_Report/March/: ckb_wk_1_-_4_report.md
Weekly_Report/May/: ckb_wk_1_report.md  ckb_wk_2_report.md  ckb_wk_3_report.md  ckb_wk_4_report.md
mvp/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mvp/.github/workflows/: ci.yml
mvp/api/: send-email.ts
mvp/contracts/: Cargo.toml  capsule.toml
mvp/contracts/.cargo/: config.toml
mvp/contracts/inherit-vault-lock/: Cargo.toml
mvp/contracts/inherit-vault-lock/src/: main.rs
mvp/contracts/inherit-vault-type/: Cargo.toml
mvp/contracts/inherit-vault-type/src/: main.rs
mvp/contracts/tests/: Cargo.toml
mvp/molecule/: vault.mol
mvp/src/: App.tsx  config.ts  index.css  main.tsx  types.ts  vite-env.d.ts
mvp/src/lib/: ccc.ts  ckb.ts  (+7 more)
my-ccc-app/: pnpm-lock.yaml
my-ccc-app/src/: App.tsx
(+16 files in other folders)
