[package]
name = "inherit-vault-lock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inherit-vault-lock"
path = "src/main.rs"

[dependencies]
ckb-std = { version = "0.16.1", features = ["dummy-atomic"] }
vault-common = { path = "../vault-common" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
