[package]
name = "inherit-vault-type"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inherit-vault-type"
path = "src/main.rs"

[dependencies]
ckb-std = { version = "0.16.1", features = ["dummy-atomic"] }
vault-common = { path = "../vault-common" }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
